Changes made by Lakshmi

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MODEL_PATH="/Users/kenk/Downloads/Wizard-Vicuna-7B-Uncensored.ggmlv3.q4_K_S.bin"
+MODEL_PATH="C:\\Users\\LUCKY\\Documents\\AdvRust\\RustProject\\rusty_llama\\Wizard-Vicuna-7B-Uncensored.ggmlv3.q2_K.bin"
